# polaris

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  configure_polaris_envs.py  deploy.py  example.cfg  pyproject.toml  setup.cfg
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/instructions/: docs.instructions.md  python.instructions.md
.github/workflows/: build_workflow.yml  docs_workflow.yml  pre_commit_update_workflow.yml
0.10.0/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  search.html
0.10.0/.doctrees/: glossary.doctree
0.10.0/_modules/: index.html
0.10.0/design_docs/: index.html  shared_steps.html  template.html
0.10.0/developers_guide/: api.html  building_docs.html  command_line.html  conda_vs_spack.html  docs.html  overview.html  quick_start.html  troubleshooting.html  updating_conda.html
0.10.0/users_guide/: config_files.html  quick_start.html  suites.html  tasks.html
0.5.0/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  search.html
0.5.0/.doctrees/: glossary.doctree  index.doctree
0.5.0/_modules/: index.html
0.5.0/_sources/: index.md.txt
0.5.0/design_docs/: index.html  shared_steps.html  template.html
0.5.0/developers_guide/: api.html  building_docs.html  command_line.html  deploying_spack.html  docs.html  overview.html  quick_start.html  troubleshooting.html
0.5.0/tutorials/: dev_add_test_group.html
0.5.0/users_guide/: config_files.html  invalid_quick_start.html  quick_start.html  suites.html  tasks.html
0.6.0/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  search.html
0.6.0/.doctrees/: glossary.doctree  index.doctree
0.6.0/_modules/: index.html
0.6.0/_sources/: glossary.md.txt
0.6.0/design_docs/: index.html  shared_steps.html  template.html
0.6.0/developers_guide/: api.html  building_docs.html  command_line.html  deploying_spack.html  docs.html  overview.html  quick_start.html  troubleshooting.html
0.6.0/tutorials/: dev_add_test_group.html
0.6.0/users_guide/: config_files.html  invalid_quick_start.html  quick_start.html  suites.html  tasks.html
0.7.0/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js
0.7.0/.doctrees/: glossary.doctree  index.doctree
0.7.0/_modules/: index.html
0.7.0/_sources/: index.md.txt
0.7.0/design_docs/: index.html  shared_steps.html  template.html
0.7.0/developers_guide/: api.html  building_docs.html  command_line.html  deploying_spack.html  docs.html  overview.html  quick_start.html  troubleshooting.html
0.7.0/tutorials/: dev_add_test_group.html
0.7.0/users_guide/: config_files.html  invalid_quick_start.html  quick_start.html  suites.html  tasks.html
0.8.0/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js
0.8.0/_modules/: index.html
0.8.0/design_docs/: index.html  shared_steps.html  template.html
0.8.0/developers_guide/: api.html  building_docs.html  command_line.html  conda_vs_spack.html  docs.html  overview.html  quick_start.html  troubleshooting.html  updating_conda.html
0.8.0/users_guide/: config_files.html  invalid_quick_start.html  quick_start.html  suites.html  tasks.html
0.9.0/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  search.html
0.9.0/.doctrees/: index.doctree
0.9.0/_modules/: index.html
0.9.0/_sources/: index.md.txt
0.9.0/design_docs/: index.html  shared_steps.html  template.html
0.9.0/developers_guide/: api.html  building_docs.html  command_line.html  conda_vs_spack.html  docs.html  overview.html  quick_start.html  troubleshooting.html  updating_conda.html
0.9.0/users_guide/: config_files.html  invalid_quick_start.html  quick_start.html  suites.html  tasks.html
cron-scripts/: README.md  launch_all.sh
cron-scripts/machines/: config_aurora.sh  config_chrysalis.sh  config_frontier.sh  config_machine.sh  config_pm-cpu.sh  config_pm-gpu.sh
deploy/: albany_supported.txt  bootstrap.py  cli_spec.json  conda-dev-spec.template  config.yaml.j2  default.cfg  dev-spec.txt  hooks.py  load.sh  load_polaris.template  petsc_supported.txt  pins.cfg  pixi.toml.j2  shared.py  spack.yaml.j2  spec-bootstrap.txt  unsupported.txt
deploy/spack/: morpheus_gnu_openmpi.yaml
docs/: Makefile  conf.py  generate_versions_json.py  glossary.md  index.md
docs/design_docs/: e3sm_init_component_inputs.md  global_ocean_dynamic_adjustment.md  global_ocean_init.md  horiz_press_grad_reference.md  index.md  pstar_init.md  shared_steps.md  template.md  unified_base_mesh.md  unified_mesh_build_sizing_field.md  unified_mesh_create_base_mesh.md  unified_mesh_prepare_coastline.md  unified_mesh_prepare_river_network.md  vector_reconstruction.md  ztilde_init.md
docs/developers_guide/: api.md  building_docs.md  command_line.md  deploying_spack.md  docs.md  framework.md  organization.md  overview.md  quick_start.md  troubleshooting.md  updating_conda.md
docs/tutorials/: dev_add_test_group.md
docs/users_guide/: config_files.md  invalid_quick_start.md  quick_start.md  suites.md  tasks.md  test_cases.md  test_suites.md
main/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: glossary.doctree  index.doctree
main/_modules/: index.html
main/_sources/: glossary.md.txt  index.md.txt
main/_static/: documentation_options.js
main/design_docs/: horiz_press_grad_reference.html  index.html  pstar_init.html  shared_steps.html  template.html  unified_base_mesh.html  unified_mesh_build_sizing_field.html  vector_reconstruction.html  (+3 more)
polaris/: __init__.py  __main__.py  archive.py  cache.py  component.py  components.py  config.py  default.cfg  io.py  list.py  logging.py  model.py  model_step.py  namelist.py  parallel.py  provenance.py  resolution.py  setup.py  step.py  streams.py  suite.py  task.py  testcase.py  testgroup.py  validate.py  version.py  yaml.py
shared/: versions.json
tests/: test_archive.py  test_omega_build_type.py
(+4014 files in other folders)
