[metadata]
name = polaris
version = attr: polaris.version.__version__
author = E3SM Development Team
author_email = xylar@lanl.gov
description = Testing and analysis for OMEGA, MPAS-Ocean, MALI and MPAS-Seaice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/E3SM-Project/polaris
project_urls =
    Bug Tracker = https://github.com/E3SM-Project/polaris/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9,<3.12
install_requires =
    cartopy
    cmocean
    importlib_resources
    ipython
    jigsawpy
    jupyter
    lxml
    matplotlib>=3.6.0,!=3.7.2
    netcdf4
    numpy
    progressbar2
    pyamg>=4.2.2
    pyproj
    ruamel.yaml
    requests
    scipy>=1.8.0
    shapely>=2.0,<3.0
    xarray

[options.entry_points]
console_scripts =
    polaris = polaris.__main__:main
    mpas_to_yaml = polaris.yaml:main_mpas_to_yaml

[flake8]
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore =
    # line break after operator
    W504
# Max width of Github code review is 79 characters
max-line-length = 79
max-complexity = 18
per-file-ignores =
    */__init__.py: F401
exclude =
    .git,
    docs,
    .idea,
    .mypy_cache,
    .pytest_cache,

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=79
skip=
    e3sm_diags/e3sm_diags_driver.py

[pycodestyle]
max-line-length = 79
exclude =
    .git
    docs
    .idea
    .mypy_cache
    .pytest_cache

[mypy]
python_version = 3.10
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
